# lets-git-ethical-backend

./: Procfile  README.md  db.sqlite3  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt
account/: api.py  forms.py  models.py  serializer.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_alter_profile_username.py  0002_auto_20210514_1209.py  0003_alter_profile_username.py  0004_alter_profile_username.py  0005_alter_profile_username.py  0006_alter_profile_username.py  0007_alter_profile_username.py  0008_auto_20210513_0517.py  0009_alter_profile_username.py
ethics_app/: admin.py  apps.py  models.py  permissions.py  serializer.py  urls.py  views.py
ethics_app/migrations/: 0001_initial.py  0002_alter_dilemmas_id.py  0002_alter_dilemmas_image.py  0002_auto_20210513_2358.py  0003_alter_dilemmas_id.py  0003_alter_dilemmas_image.py  0004_profiledata_userreg.py  0005_auto_20210506_0347.py  0006_auto_20210508_0155.py  0007_delete_userreg.py  0008_auto_20210511_0022.py  0009_auto_20210511_0944.py
lets_git_ethical/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
postgres-data/: postmaster.pid
postgres-data/base/1/: 1259  12907  2675  2704  3085  3164  3455
postgres-data/base/13066/: 1259  2619  2662  2663  2673
postgres-data/base/13067/: 2658  2674  2691  3609  pg_internal.init
postgres-data/global/: 1260  2676  pg_control  pg_internal.init
postgres-data/pg_stat/: global.stat
postgres-data/pg_stat_tmp/: db_0.stat  db_13067.stat  global.stat
