[tool.poetry]
name = "lets-git-ethical-backend"
version = "0.1.0"
description = ""
authors = ["Alex Angelico <alex.angelico@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.1"
Pillow = "^8.2.0"
djangorestframework = "^3.12.4"
django-environ = "^0.4.5"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.8.6"
django-cors-headers = "^3.7.0"
djangorestframework-jwt = "^1.11.0"
dj-database-url = "^0.5.0"
DateTime = "^4.3"
django-autoslug = "^1.9.8"
django-storages = "^1.11.1"
boto3 = "^1.17.72"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
